# dbadmin-ai-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/dbadmin/: __init__.py  audit.py  config.py  sanitize.py
src/dbadmin/ai/: __init__.py  chat.py  llm.py  prompts.py  rate_limiter.py  router.py
src/dbadmin/analysis/: __init__.py  health.py  index.py  query.py
src/dbadmin/api/: app.py  schemas.py
src/dbadmin/cli/: __init__.py  main.py
src/dbadmin/cli/commands/: analyze.py  chat.py  connect.py  health.py  query.py  recommend.py
src/dbadmin/connectors/: __init__.py  base.py  base_async.py  factory.py  mongodb.py  mysql.py  postgresql.py  redis.py
src/dbadmin/rag/: __init__.py  ingest.py  retriever.py  vectorstore.py
tests/: test_rate_limiter.py  test_sanitize_sql.py
