[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbadmin-ai"
version = "0.1.0"
description = "AI-powered database administration CLI tool with RAG capabilities"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "DbAdmin AI Team" }
]
keywords = ["database", "admin", "ai", "cli", "postgresql", "mysql", "mongodb", "redis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]

dependencies = [
    # CLI
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    
    # AI/LLM
    "openai>=1.12.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    
    # RAG/Embeddings
    "chromadb>=0.4.22",
    
    # Database connectors
    "psycopg[binary]>=3.1.0",
    "psycopg_pool>=3.2.0",
    "mysql-connector-python>=8.3.0",
    "pymongo>=4.6.0",
    "redis>=5.0.0",
    
    # Utilities
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
    "keyring>=24.0.0",
    
    # API/Websockets
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
dbadmin = "dbadmin.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dbadmin"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
